adjust spacing and fix article image flex bug in safari

--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -23,7 +23,7 @@ body {
   --color-hover: var(--color-green);
   --color-shadow: rgba(0, 0, 0, 0.24);
 
-  --spacing-siteborder: 1rem;
+  --spacing-siteborder: 0.8rem;
   --spacing-sitepadding: 3.6rem;
   --spacing-gap: 1.2rem;
 
